some of my personal info is changedgit add -A

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ Welcome to my website! I'm a Master of Science student at Sharif University, spe
 		            	<li class="d-flex"><span>Date of birth:</span> <span>September 25, 1999</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Tehran , Iran</span></li>
 		            	<!-- <li class="d-flex"><span>Zip code:</span> <span>8164717835</span></li> -->
-		            	<li class="d-flex"><span>Email 1:</span> <span>alirezajafarineysiani[AT]yahoo.com</span></li>
-		            	<li class="d-flex"><span>Email 2:</span> <span>alirezajafarineysiani[AT]gmail.com</span></li>
+		            	<li class="d-flex"><span>Email 1:</span> <span>alirezajafarineysiani[At]yahoo.com</span></li>
+		            	<li class="d-flex"><span>Email 2:</span> <span>alirezajafarineysiani[At]gmail.com</span></li>
 		            	<!-- <li class="d-flex"><span>Phone: </span> <span>+98-913-***-*904</span></li> -->
-						
+
 		            </ul>
 		          </div>
 		        </div>
@@ -942,9 +942,9 @@ Welcome to my website! I'm a Master of Science student at Sharif University, spe
 				 <li class="ftco-animate"><a href="https://t.me/alirezajafarineysiani"><img src="icons/telegram.png"></a></li>
 				 <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100038828931872"><img src="icons/facebook.png"></a></li>
 				 <li class="ftco-animate"><a href="https://www.linkedin.com/in/alirezajafarineysiani/"><img src="icons/linkedin.png"></a></li>
-				
+<!-- 				
 				 <li class="ftco-animate"><a href="https://www.youtube.com/channel/UCQ7ARNvcprEa9iAmvTlk5Ow/"><img src="icons/youtube.jpg"></a></li>
-                <li class="ftco-animate"><a href="https://www.instagram.com/alirezajafarineysiani/"><img src="icons/instagram.png"></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/alirezajafarineysiani/"><img src="icons/instagram.png"></a></li> -->
               </ul>
             </div>
           </div>
@@ -979,9 +979,9 @@ Welcome to my website! I'm a Master of Science student at Sharif University, spe
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203W, Department of Electrical Engineering, Sharif University, Tehran, Iran</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+98-913-***-*904</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">alirezajafarineysiani@gmail.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Learning and Intelligent Systems (203W), Department of Electrical Engineering, Sharif University, Tehran, Iran</span></li>
+	                <!-- <li><a href="#"><span class="icon icon-phone"></span><span class="text">+98-913-***-*904</span></a></li> -->
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">alirezajafarineysiani[At]yahoo.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
