and finally, reaf it

--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@ Welcome to my website! I'm a Master of Science student at Sharif University, spe
 
 				<div >
 					
-						<h2 class="mb-4">And read it</h2>
+						<h2 class="mb-4">And finally, read it</h2>
 						<nastaligh>
 						<h3>
 							<br>
