--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 							<h2 class="heading">Publications</h2>
 							<div class="resume-wrap d-flex ftco-animate">
 								<div class="icon d-flex align-items-center justify-content-center">
-									<img src="images/ieee.jpg" style="width: 50px; height: 45px;">
+									<!-- <img src="images/ieee.jpg" style="width: 50px; height: 45px;"> -->
 								</div>
 								<div class="text pl-3">
 
